--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "ereconomy",
+  "homepage": "https://ayomirotoye.github.io/ereconomy",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +15,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "encrypt-storage": "^2.2.6",
+    "gh-pages": "^3.2.3",
     "moment": "^2.29.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
@@ -25,6 +28,7 @@
     "react-tooltip": "^4.2.21",
     "recoil": "^0.7.0",
     "sass": "^1.49.11",
+    "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -33,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
